tests/lang/compile_fail/bare_dep_reference.koja
fn main
  h = Headers{}
  h.print()
end
